--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <h1>National Parks Finder</h1>
 
         <form id="js-form">
-            <label for="state-search">State(s)</label>
-            <input type="text" name="state-search" id="js-state-search" required>
+            <label class ="inputs" for="state-search">State(s)</label>
+            <input class ="inputs" type="text" name="state-search" id="js-state-search" required>
 
-            <label for="max-results">Maximum results to return</label>
-            <input type="number" name="max-results" id="js-max-results" value="10" step="1" min="1" required>
+            <label class ="inputs" for="max-results">Maximum results to return</label>
+            <input class ="inputs" type="number" name="max-results" id="js-max-results" value="10" step="1" min="1" required>
 
             <input type="submit" value="Go!">
         </form>
